--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "description": "Me trying to setup react with redux on windows 10 bash",
   "main": "src/helloworld.js",
-
   "scripts": {
-    "build": "node_modules/webpack/bin/webpack.js src/helloworld.js bundle.js --module-bind js=babel-loader"
+    "test": "echo \"Error: no test specified\" && exit 1",
+		"build": "node_modules/webpack/bin/webpack.js src/helloworld.js bundle.js --module-bind js=babel-loader"
   },
-
   "dependencies": {
     "babel-core": "^6.13.2",
     "babel-loader": "^6.2.5",
     "babel-preset-react": "^6.11.1",
     "react": "^15.3.0",
+    "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2"
   },
@@ -21,9 +21,6 @@
     "webpack": "^1.13.2",
     "webpack-dashboard": "^0.1.1",
     "webpack-dev-server": "^1.14.1"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
